--- a/env.example
+++ b/env.example
@@ -1,29 +1,24 @@
 # 日志文件路径，支持多个文件，用逗号分隔
-LOG_FILE_PATHS=./testLog/syslog,./testLog/messages,/var/log/application.log
+LOG_FILE_PATHS=./testLog/syslog,./testLog/messages,./testLog/kernel_trace.log,./testLog/repeated_errors.log,/var/log/application.log
 
 # AI分析配置
 AI_API_URL=https://api.openai.com/v1/chat/completions
 AI_API_KEY=your_api_key_here
 AI_MODEL_NAME=gpt-3.5-turbo
-# 是否启用AI（true/false default:false）
-AI_ENABLE=false
+AI_ENABLE=true
 
 # 微信告警配置
 AI_WECHAT_WEBHOOK=https://qyapi.weixin.qq.com/cgi-bin/webhook/send?key=your_webhook_key
-#是否启用告警（true/false default:false）
-ALERT_ENABLE="false"
 
 # Elasticsearch配置
 ES_NODES=http://localhost:9200
 ES_INDEX=log-analysis
-#是否启用ES（true/false default:false）
-ES_ENABLE="false"
-# metrics配置
+
+# 其他配置选项
+MAX_WORKERS=2
+ALERT_TTL=5m
 METRICS_PORT=2112
-
-
-# 可选：自定义采集配置
-# COLLECTOR_MAX_WORKERS=10
-# COLLECTOR_CONTEXT_LINES=5
-# COLLECTOR_BUFFER_SIZE=1000
-# COLLECTOR_TIMEOUT=30s
+LOG_LEVEL=info
+ENABLE_CELL_TRACE=true
+ENABLE_ALERT=true
+ENABLE_ES=true
